Parse a complete QDateTime object as we export time information as well.

BUG: 207078

svn path=/trunk/KDE/kdepim/kaddressbook/; revision=1023859